--- a/index.html
+++ b/index.html
@@ -418,6 +418,9 @@
         </select>
         <!-- Color scale hide/show button, disabled at first -->
         <button id="color-scale-btn" disabled>Hide Scale</button>
+        <!-- drop down, choose color-scheme-->
+        <select id="color-scheme-picker">
+        </select>
       </div>
     </div>
     <div id="map-container">
