--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <!-- Tags which *must* come first in the header -->
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
   <!-- title -->
   <title>Word Voyage</title>
