--- a/index.html
+++ b/index.html
@@ -458,6 +458,13 @@
         compare the vector of the input word and the vector of the name of each country.
         The similarity score is then used to color the country on the map above. 
       </p>
+      <h3>Quirks</h3>
+      <p>
+        <ul>
+          <li>Chad appears close to almost every word likely because it's a common English name.</li>
+          <li>Similarly, Iraq appears close to almost every word probably because of abundance of WoT articles in the training data.</li>
+        </ul>
+      </p>
       <h3>Specification</h3>
       <p>
         Model: <a href="https://platform.openai.com/docs/guides/embeddings/embedding-models">text-embedding-ada-002</a>
