--- a/index.html
+++ b/index.html
@@ -474,8 +474,7 @@
         <li><a href="https://en.wikipedia.org/wiki/Cosine_similarity">Cosine Similarity</a></li>
         <li><a href="https://en.wikipedia.org/wiki/Euclidean_distancey">Euclidean Similarity</a></li>
       </ul>
-      <br />
-      Tools:
+      <h3>Tools:</h3>
       <ul>
         <li><a href="https://plotly.com/javascript/">Plotly JS</a></li>
         <li>Vector operations in vanilla PHP</li>
