--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
     <div id="about">
       <h2>About</h2>
       <p>
-        This project was created by <a href="https://www.ubaada.com">Ubaada</a>
+        This project was created by <a href="https://www.ubaada.com">Ubaada</a>. The code is <a href="https://github.com/ubaada/wordvoyage">available on GitHub</a>.
       </p>
       <h3>How does it work?</h3>
       <p>
