--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   <title>Word Map</title>
   <!-- Facebook preview card -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Word Voyage - Word to Country Map" />
+  <meta property="og:title" content="Word Map - Word to Country Map" />
   <meta property="og:description" content="Generate word-to-country relatedness maps with AI word embeddings." />
-  <meta property="og:image" content="https://www.wordmap.ubaada.com/images/wordvoyage.png" />
+  <meta property="og:image" content="https://www.wordmap.ubaada.com/images/wordmap.png" />
 
   <!-- Twitter preview card --->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:creator" content="@ubaada">
-  <meta name="twitter:title" content="Word Voyage - Word to Country Map">
+  <meta name="twitter:title" content="Word Map - Word to Country Map">
   <meta name="twitter:description" content="Generate word-to-country relatedness maps with AI word embeddings.">
-  <meta name="twitter:image" content="https://www.wordmap.ubaada.com/images/wordvoyage.png">
+  <meta name="twitter:image" content="https://www.wordmap.ubaada.com/images/wordmap.png">
 
   <!-- Description for search results-->
   <meta name="description" content="Generate word-to-country relatedness maps with AI word embeddings.">
