--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
       </p>
       <h3>Specification</h3>
       <p>
-        Model: <a href="https://platform.openai.com/docs/guides/embeddings/embedding-models">text-embedding-ada-002</a>
+        Model: <a href="https://platform.openai.com/docs/guides/embeddings/embedding-models">text-embedding-3-small</a>
         <br />
         Similarity measure:
       <ul>
