double click fix

--- a/index.html
+++ b/index.html
@@ -409,8 +409,8 @@
       <!-- The input textbox, submit button, setting -->
       <div id="search-box-container">
         <input type="text" id="inp-box" placeholder="Enter a word or a phrase" />
-        <button id="submit-btn"></button>
-        <button id="settings-btn"></button>
+        <input type="button" id="submit-btn">
+        <input type="button" id="settings-btn">        
       </div>
       <!-- Settings bar -->
       <div id="settings">
