--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
       var head = document.getElementsByTagName("head")[0];
       var adScript = document.createElement("script");
       adScript.type = "text/javascript";
-      var gaID = "UA-114940188-1";
+      var gaID = "G-6YFPNXLP2B";
       adScript.src = "https://www.googletagmanager.com/gtag/js?id=" + gaID;
       adScript.async = true;
       head.appendChild(adScript);
